--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Multiroom Chat",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
     "body-parser": "^1.17.2",
     "consign": "^0.1.6",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "express-validator": "^3.2.1"
   }
 }
